--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-backdrop">
+    <div class="modal-backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -485,12 +485,18 @@
               <textarea  class="form-input-comment" id="user-comment" type="text" name="user-comment" placeholder="Text input"></textarea>
             </div>
 <div class="checkbox-form">
-  <input class="checkbox-input" type="checkbox" id="privacy-policy" name="privacy-policy" value="true">
-  <label class="checkbox-label"  for="privacy-policy">I accept the terms and conditions of the 
+  <input class="checkbox-input visually-hidden" type="checkbox" id="privacy-policy" name="privacy-policy" value="true">
+  <label class="checkbox-label"  for="privacy-policy">
+    <span class="checkbox-form-custom">
+      <svg class="checkbox-icon" width="10" height="8">
+        <use href="./images/icons.svg#icon-checkmark"></use>
+      </svg>
+    </span>
+    I accept the terms and conditions of the 
     <a href="" class="checkbox-label-link">Privacy Policy</a>
   </label>
 </div>
-<button class="checkbox-btn" type="submit">Send</button>
+<button class="button checkbox-btn" type="submit">Send</button>
           </div>
         </form>
       </div>
