--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             </div>
                <div class="form-container">
             <label class="form-label" for="user-comment">Comment</label>
-              <textarea  class="form-input-comment" id="user-comment" type="text" name="user-comment" placeholder="Text input"></textarea>
+              <textarea  class="form-input-comment" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
             </div>
 <div class="checkbox-form">
   <input class="checkbox-input visually-hidden" type="checkbox" id="privacy-policy" name="privacy-policy" value="true">
@@ -500,6 +500,5 @@
           </div>
         </form>
       </div>
-    </div>
   </body>
 </html>
