--- a/index.html
+++ b/index.html
@@ -456,49 +456,79 @@
           <div class="form-container">
             <label class="form-label" for="user-name">Name</label>
             <div class="form-input-wrapper">
-              <input  class="form-input" id="user-name" type="text" name="user-name" required autofocus/>
+              <input
+                class="form-input"
+                id="user-name"
+                type="text"
+                name="user-name"
+                required
+                autofocus
+              />
               <svg class="form-input-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-person" ></use>
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
-              </div>
             </div>
-              <div class="form-container">
-            <label class="form-label" for="user-phone">Phone</label>
-                 <div class="form-input-wrapper">
-                   <input  class="form-input" id="user-phone" type="text" name="user-phone" required />
-              <svg class="form-input-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone" ></use>
-              </svg>
-              </div>
-            </div>
-         <div class="form-container">
-            <label class="form-label" for="user-email">Email</label>
-                 <div class="form-input-wrapper">
-                   <input  class="form-input" id="user-email" type="text" name="user-email" required />
-              <svg class="form-input-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-email" ></use>
-              </svg>
-              </div>
-            </div>
-               <div class="form-container">
-            <label class="form-label" for="user-comment">Comment</label>
-              <textarea  class="form-input-comment" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
-            </div>
-<div class="checkbox-form">
-  <input class="checkbox-input visually-hidden" type="checkbox" id="privacy-policy" name="privacy-policy" value="true">
-  <label class="checkbox-label"  for="privacy-policy">
-    <span class="checkbox-form-custom">
-      <svg class="checkbox-icon" width="10" height="8">
-        <use href="./images/icons.svg#icon-checkmark"></use>
-      </svg>
-    </span>
-    I accept the terms and conditions of the 
-    <a href="" class="checkbox-label-link">Privacy Policy</a>
-  </label>
-</div>
-<button class="button checkbox-btn" type="submit">Send</button>
           </div>
+          <div class="form-container">
+            <label class="form-label" for="user-phone">Phone</label>
+            <div class="form-input-wrapper">
+              <input
+                class="form-input"
+                id="user-phone"
+                type="text"
+                name="user-phone"
+                required
+              />
+              <svg class="form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-container">
+            <label class="form-label" for="user-email">Email</label>
+            <div class="form-input-wrapper">
+              <input
+                class="form-input"
+                id="user-email"
+                type="text"
+                name="user-email"
+                required
+              />
+              <svg class="form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-container">
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-input-comment"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox-form">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              id="privacy-policy"
+              name="privacy-policy"
+              value="true"
+            />
+            <label class="checkbox-label" for="privacy-policy">
+              <span class="checkbox-form-custom">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="checkbox-label-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="button checkbox-btn" type="submit">Send</button>
         </form>
       </div>
+    </div>
   </body>
 </html>
