--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -464,7 +464,7 @@
                 required
                 autofocus
               />
-              <svg class="form-input-icon" width="18" height="18">
+              <svg class="form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -479,7 +479,7 @@
                 name="user-phone"
                 required
               />
-              <svg class="form-input-icon" width="18" height="18">
+              <svg class="form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -494,7 +494,7 @@
                 name="user-email"
                 required
               />
-              <svg class="form-input-icon" width="18" height="18">
+              <svg class="form-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -512,11 +512,11 @@
             <input
               class="checkbox-input visually-hidden"
               type="checkbox"
-              id="privacy-policy"
-              name="privacy-policy"
+              id="user-privacy"
+              name="user-privacy"
               value="true"
             />
-            <label class="checkbox-label" for="privacy-policy">
+            <label class="checkbox-label" for="user-privacy">
               <span class="checkbox-form-custom">
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkmark"></use>
