--- a/index.html
+++ b/index.html
@@ -442,6 +442,25 @@
             </li>
           </ul>
         </div>
+        <div class="container-form-subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label" for="footer-email">
+              <input
+                class="footer-form-input"
+                id="footer-email"
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+            /></label>
+            <button class="footer-subscribe-button" type="submit">
+              Subscribe
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="modal-backdrop is-open">
