--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-container">
+          <div class="form-container-comment">
             <label class="form-label" for="user-comment">Comment</label>
             <textarea
               class="form-input-comment"
