--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           <h1 class="title-section-first">
             Effective Solutions for Your Business
           </h1>
-          <button class="button" type="button">Order Service</button>
+          <button class="button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -463,9 +465,9 @@
         </div>
       </div>
     </footer>
-    <div class="modal-backdrop is-open">
+    <div class="modal-backdrop" data-modal>
       <div class="modal">
-        <button class="modal-close-btn" type="button">
+        <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
@@ -494,7 +496,7 @@
               <input
                 class="form-input"
                 id="user-phone"
-                type="text"
+                type="tel"
                 name="user-phone"
                 required
               />
@@ -509,7 +511,7 @@
               <input
                 class="form-input"
                 id="user-email"
-                type="text"
+                type="email"
                 name="user-email"
                 required
               />
@@ -549,5 +551,6 @@
         </form>
       </div>
     </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
